--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
 
 install:
   - pip install ansible
-  - ansible-galaxy install iaroslavb/ansible-role-apache
+  - ansible-galaxy install iaroslavb/apache
 
 script:
   - ansible-playbook -i tests/inventory tests/test.yml --syntax-check 
