install libapache2-mod-php from default distribution repo

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,2 +1,6 @@
 ---
 # tasks file for ansible-role-apache-modphp/
+- name: install mod-php for apache
+  apt:
+    name:   libapache2-mod-php
+    state:  latest
