test role for idempotency, check if package is actually installed

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,10 @@ install:
   - ansible-galaxy install iaroslavb.apache
 
 script:
-  - ansible-playbook -i tests/inventory tests/test.yml --syntax-check 
+  - ansible-playbook -i tests/inventory tests/test.yml --syntax-check
+  - ansible-playbook -i tests/inventory tests/test.yml --connection=local --become
+  - ansible-playbook -i tests/inventory tests/test.yml --connection=local --become | grep -e 'changed=0.*failed=0'
+  - dpkg --status libapache2-mod-php | grep -e "install ok installed"
 
 notifications:
   webhooks: https://galaxy.ansible.com/api/v1/notifications/
